tests/should_fail/bug/436_1.stderr
error: called prophetic logic function `<&mut T as creusot_std::logic::ops::Fin>::fin` in logic context
  --> 436_1.rs:10:19
   |
10 |     pearlite! { *(^x).g }
   |                   ^^

error: aborting due to 1 previous error

